# Oasis-Renderer

./: CMakeLists.txt  CMakePresets.json  README.md
Additional/: imgui.ini
Additional/Includes/GLFW/: glfw3native.h
Additional/Includes/glad/: glad.h
Core/: Main.cpp
Oasis Renderer Project/: Graphics.h  Main.cpp  Oasis Renderer Project.sln  Oasis Renderer Project.vcxproj  Oasis Renderer Project.vcxproj.filters  SystemGlobals.h  SystemManager.cpp  SystemManager.h  Vertex.cpp  Vertex.h  WindowManager.h  imgui.ini
Oasis Renderer Project/Application/: Main.cpp
Oasis Renderer Project/Core/Headers/: GameObject.h  Graphics.h  Material.h  SystemManager.h  WindowManager.h
Oasis Renderer Project/Core/Shaders/Fragment Shaders/: FallbackFragment.frag
Oasis Renderer Project/Core/Shaders/Vertex Shaders/: FallbackVertex.vert
Oasis Renderer Project/Core/Source/: GameObject.cpp  Graphics.cpp  Material.cpp  SystemManager.cpp  WindowManager.cpp  glad.c
Oasis Renderer Project/Oasis Re.5e6d14b0/x64/Debug/: Oasis Renderer Project.exe.recipe  Oasis Renderer Project.ilk  graphics.obj.enc  vc143.idb
Oasis Renderer Project/Oasis Re.5e6d14b0/x64/Debug/Oasis Re.5e6d14b0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Oasis Renderer Project.lastbuildstate  link.command.1.tlog  (+3 more)
Source/: SystemGlobals.h
Source/Headers/: GameObject.h  Graphics.h  Material.h  SystemManager.h  Vertex.h  WindowManager.h
Source/Shaders/Fragment Shaders/: FallbackFragment.frag
Source/Source/: GameObject.cpp  Graphics.cpp  Vertex.cpp  WindowManager.cpp  glad.c
